data/derived/comb/progs/unify/prog6690.ml.out
Characters 346-447:
  |6->buildThresh(build(rand,depth-1),build(rand,depth-1),build(rand,depth-1),build(rand,depth-1),build(rand,depth-1));;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd * 'e
       but an expression was expected of type expr * expr * expr * expr
